// @generated
// This file is automatically generated by Kanel. Do not modify manually.

import { contactsUuid, type ContactsUuid } from './Contacts';
import { actionOutcome, type default as ActionOutcome } from './ActionOutcome';
import { actionDirection, type default as ActionDirection } from './ActionDirection';
import { z } from 'zod';

/** Identifier type for public.actions */
export type ActionsUuid = string & { __brand: 'public.actions' };

/**
 * Represents the table public.actions
 * Tracks all events, including system-generated communications and user actions, even for anonymous visitors.
 */
export default interface Actions {
  /** Universally unique identifier for the event. */
  uuid: ActionsUuid;

  /** Reference to the contact involved in the event. Always required as actions table tracks identified users only. */
  contact_uuid: ContactsUuid;

  /** Generic origin of the event */
  origin: string | null;

  /** Describes the type of event */
  action: string;

  /** Outcome of the event, success or failure. */
  outcome: ActionOutcome;

  /** Structured JSONB data capturing what happened, e.g., status codes, messages, or clicked URLs. */
  details: unknown | null;

  /** Timestamp indicating when the event took place. */
  occurred_at: Date;

  /** User who created the record. */
  created_by: string | null;

  /** Timestamp when the record was created. */
  created_date: Date | null;

  /** User who last updated the record. */
  updated_by: string | null;

  /** Timestamp when the record was last updated. */
  updated_date: Date | null;

  /** Stores a summary of the HTTP method and endpoint (e.g., "POST - /api/subscribe"). */
  endpoint: string | null;

  /** Specifies the direction of the event: inbound (incoming) or outbound (outgoing). */
  direction: ActionDirection | null;

  /** UTM source parameter identifying the traffic source (e.g., google, facebook, newsletter). */
  utm_source: string | null;

  /** UTM medium parameter identifying the marketing medium (e.g., cpc, email, social). */
  utm_medium: string | null;

  /** UTM campaign parameter identifying the specific campaign name. */
  utm_campaign: string | null;

  /** UTM term parameter for paid search keywords. */
  utm_term: string | null;

  /** UTM content parameter for A/B testing and content-targeted ads. */
  utm_content: string | null;

  /** Country where the action occurred. */
  country: string | null;

  /** Region/State where the action occurred. */
  region: string | null;

  /** City where the action occurred. */
  city: string | null;

  /** Timezone of the action location. */
  timezone: string | null;

  /** Latitude coordinate of the action location. */
  latitude: number | null;

  /** Longitude coordinate of the action location. */
  longitude: number | null;
}

/**
 * Represents the initializer for the table public.actions
 * Tracks all events, including system-generated communications and user actions, even for anonymous visitors.
 */
export interface ActionsInitializer {
  /**
   * Universally unique identifier for the event.
   * Default value: uuid_generate_v4()
   */
  uuid?: ActionsUuid;

  /** Reference to the contact involved in the event. Always required as actions table tracks identified users only. */
  contact_uuid: ContactsUuid;

  /** Generic origin of the event */
  origin?: string | null;

  /** Describes the type of event */
  action: string;

  /** Outcome of the event, success or failure. */
  outcome: ActionOutcome;

  /** Structured JSONB data capturing what happened, e.g., status codes, messages, or clicked URLs. */
  details?: unknown | null;

  /** Timestamp indicating when the event took place. */
  occurred_at: Date;

  /** User who created the record. */
  created_by?: string | null;

  /** Timestamp when the record was created. */
  created_date?: Date | null;

  /** User who last updated the record. */
  updated_by?: string | null;

  /** Timestamp when the record was last updated. */
  updated_date?: Date | null;

  /** Stores a summary of the HTTP method and endpoint (e.g., "POST - /api/subscribe"). */
  endpoint?: string | null;

  /** Specifies the direction of the event: inbound (incoming) or outbound (outgoing). */
  direction?: ActionDirection | null;

  /** UTM source parameter identifying the traffic source (e.g., google, facebook, newsletter). */
  utm_source?: string | null;

  /** UTM medium parameter identifying the marketing medium (e.g., cpc, email, social). */
  utm_medium?: string | null;

  /** UTM campaign parameter identifying the specific campaign name. */
  utm_campaign?: string | null;

  /** UTM term parameter for paid search keywords. */
  utm_term?: string | null;

  /** UTM content parameter for A/B testing and content-targeted ads. */
  utm_content?: string | null;

  /** Country where the action occurred. */
  country?: string | null;

  /** Region/State where the action occurred. */
  region?: string | null;

  /** City where the action occurred. */
  city?: string | null;

  /** Timezone of the action location. */
  timezone?: string | null;

  /** Latitude coordinate of the action location. */
  latitude?: number | null;

  /** Longitude coordinate of the action location. */
  longitude?: number | null;
}

/**
 * Represents the mutator for the table public.actions
 * Tracks all events, including system-generated communications and user actions, even for anonymous visitors.
 */
export interface ActionsMutator {
  /** Universally unique identifier for the event. */
  uuid?: ActionsUuid;

  /** Reference to the contact involved in the event. Always required as actions table tracks identified users only. */
  contact_uuid?: ContactsUuid;

  /** Generic origin of the event */
  origin?: string | null;

  /** Describes the type of event */
  action?: string;

  /** Outcome of the event, success or failure. */
  outcome?: ActionOutcome;

  /** Structured JSONB data capturing what happened, e.g., status codes, messages, or clicked URLs. */
  details?: unknown | null;

  /** Timestamp indicating when the event took place. */
  occurred_at?: Date;

  /** User who created the record. */
  created_by?: string | null;

  /** Timestamp when the record was created. */
  created_date?: Date | null;

  /** User who last updated the record. */
  updated_by?: string | null;

  /** Timestamp when the record was last updated. */
  updated_date?: Date | null;

  /** Stores a summary of the HTTP method and endpoint (e.g., "POST - /api/subscribe"). */
  endpoint?: string | null;

  /** Specifies the direction of the event: inbound (incoming) or outbound (outgoing). */
  direction?: ActionDirection | null;

  /** UTM source parameter identifying the traffic source (e.g., google, facebook, newsletter). */
  utm_source?: string | null;

  /** UTM medium parameter identifying the marketing medium (e.g., cpc, email, social). */
  utm_medium?: string | null;

  /** UTM campaign parameter identifying the specific campaign name. */
  utm_campaign?: string | null;

  /** UTM term parameter for paid search keywords. */
  utm_term?: string | null;

  /** UTM content parameter for A/B testing and content-targeted ads. */
  utm_content?: string | null;

  /** Country where the action occurred. */
  country?: string | null;

  /** Region/State where the action occurred. */
  region?: string | null;

  /** City where the action occurred. */
  city?: string | null;

  /** Timezone of the action location. */
  timezone?: string | null;

  /** Latitude coordinate of the action location. */
  latitude?: number | null;

  /** Longitude coordinate of the action location. */
  longitude?: number | null;
}

export const actionsUuid = z.string() as unknown as z.Schema<ActionsUuid>;

export const actions = z.object({
  uuid: actionsUuid,
  contact_uuid: contactsUuid,
  origin: z.string().nullable(),
  action: z.string(),
  outcome: actionOutcome,
  details: z.unknown().nullable(),
  occurred_at: z.date(),
  created_by: z.string().nullable(),
  created_date: z.date().nullable(),
  updated_by: z.string().nullable(),
  updated_date: z.date().nullable(),
  endpoint: z.string().nullable(),
  direction: actionDirection.nullable(),
  utm_source: z.string().nullable(),
  utm_medium: z.string().nullable(),
  utm_campaign: z.string().nullable(),
  utm_term: z.string().nullable(),
  utm_content: z.string().nullable(),
  country: z.string().nullable(),
  region: z.string().nullable(),
  city: z.string().nullable(),
  timezone: z.string().nullable(),
  latitude: z.number().nullable(),
  longitude: z.number().nullable(),
}) as unknown as z.Schema<Actions>;

export const actionsInitializer = z.object({
  uuid: actionsUuid.optional(),
  contact_uuid: contactsUuid,
  origin: z.string().optional().nullable(),
  action: z.string(),
  outcome: actionOutcome,
  details: z.unknown().optional().nullable(),
  occurred_at: z.date(),
  created_by: z.string().optional().nullable(),
  created_date: z.date().optional().nullable(),
  updated_by: z.string().optional().nullable(),
  updated_date: z.date().optional().nullable(),
  endpoint: z.string().optional().nullable(),
  direction: actionDirection.optional().nullable(),
  utm_source: z.string().optional().nullable(),
  utm_medium: z.string().optional().nullable(),
  utm_campaign: z.string().optional().nullable(),
  utm_term: z.string().optional().nullable(),
  utm_content: z.string().optional().nullable(),
  country: z.string().optional().nullable(),
  region: z.string().optional().nullable(),
  city: z.string().optional().nullable(),
  timezone: z.string().optional().nullable(),
  latitude: z.number().optional().nullable(),
  longitude: z.number().optional().nullable(),
}) as unknown as z.Schema<ActionsInitializer>;

export const actionsMutator = z.object({
  uuid: actionsUuid.optional(),
  contact_uuid: contactsUuid.optional(),
  origin: z.string().optional().nullable(),
  action: z.string().optional(),
  outcome: actionOutcome.optional(),
  details: z.unknown().optional().nullable(),
  occurred_at: z.date().optional(),
  created_by: z.string().optional().nullable(),
  created_date: z.date().optional().nullable(),
  updated_by: z.string().optional().nullable(),
  updated_date: z.date().optional().nullable(),
  endpoint: z.string().optional().nullable(),
  direction: actionDirection.optional().nullable(),
  utm_source: z.string().optional().nullable(),
  utm_medium: z.string().optional().nullable(),
  utm_campaign: z.string().optional().nullable(),
  utm_term: z.string().optional().nullable(),
  utm_content: z.string().optional().nullable(),
  country: z.string().optional().nullable(),
  region: z.string().optional().nullable(),
  city: z.string().optional().nullable(),
  timezone: z.string().optional().nullable(),
  latitude: z.number().optional().nullable(),
  longitude: z.number().optional().nullable(),
}) as unknown as z.Schema<ActionsMutator>;
